# chihlee_LangChain-20250830

./: .dockerignore  Dockerfile  README-UV-container.md  README-container.md  README.md  docker-compose.yml  lesson1.ipynb  main.py  pyproject.toml  requirements.txt  start-container.sh  基本數學運算範例.py  歡迎使用_Colab.ipynb
.cursor/Lesson7/: lesson7-0-2.ipynb  lesson7-0.ipynb  lesson7-1me.ipynb  lesson7_1.ipynb
.cursor/Lesson7/db/chroma_db_v3/: chroma.sqlite3
.cursor/Lesson7/db/chroma_db_with_metadata_chinese_nb/: chroma.sqlite3
.cursor/lesson4/: agents.mdc  lesson4_1.ipynb  lesson4_2.py
.cursor/lesson5/: lesson5_2.ipynb  lesson5_3.py  lesson5_5.ipynb  lesson5_6.ipynb  lesson5_7.ipynb
.cursor/rules/: langchain-class.mdc  test.mdc
.cursor/rules/cursor/: lesson2_1.ipynb  lesson2_2.ipynb  lesson2_3.ipynb  lesson2_4.ipynb
.devcontainer/: devcontainer.json
Link/: README.md
langchain/: lesson2_1.ipynb  lesson2_4.ipynb  lesson3_0.ipynb  lesson3_1.ipynb  lesson3_4_ai.ipynb
lesson1/: lesson1_1.py
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
