[project]
name = "my-langchain-project"
version = "0.1.0"
description = "LangChain 專案練習"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5",
    "langchain-google-genai>=3.0.0",
    "langchain-openai>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "langchain-ollama>=1.0.0",
    "fastapi>=0.120.0",
    "gradio>=5.49.0",
    "python-dotenv>=1.0.0",
    "ollama>=0.5.4",
    "langchain>=0.3.27",
    "uvicorn>=0.14.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "onnxruntime>=1.16.0,<1.23.0",
    "chromadb>=1.2.1",
    "langchain-community>=0.4",
    "langchain-text-splitters>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

jupyter = [
    "jupyter>=1.1.0",
    "jupyterlab>=4.4.0",
    "ipywidgets>=8.1.0",
    "notebook>=7.4.0",
]

[tool.setuptools.packages.find]

[tool.uv]
dev-dependencies = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
